WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69720
JSVALUE32_64 DFG JIT - fillJSValue with a pair of GPRs should not set the registerFormat to be DataFormatJSDouble
https://bugs.webkit.org/show_bug.cgi?id=69720
Summary
JSVALUE32_64 DFG JIT - fillJSValue with a pair of GPRs should not set the reg...
Yuqiang Xian
Reported
2011-10-09 04:21:58 PDT
In JSVALUE32_64 DFG, DataFormatJSDouble is assumed to be represented by a FPR and will be used for further optimizations, though we currently don't fully utilize it. For now when filling a JS value which was spilled as a JSDouble with a pair of GPRs, we'll set the registerFormat to DataFormatJS to avoid compilation errors.
Attachments
the patch
(1.79 KB, patch)
2011-10-09 04:27 PDT
,
Yuqiang Xian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuqiang Xian
Comment 1
2011-10-09 04:27:45 PDT
Created
attachment 110296
[details]
the patch
WebKit Review Bot
Comment 2
2011-10-09 13:13:53 PDT
Comment on
attachment 110296
[details]
the patch Clearing flags on attachment: 110296 Committed
r97031
: <
http://trac.webkit.org/changeset/97031
>
WebKit Review Bot
Comment 3
2011-10-09 13:13:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug